[gd_scene load_steps=13 format=3 uid="uid://qkudhguqpoie"]

[ext_resource type="Script" uid="uid://bvckeussukn4p" path="res://entities/player/player.gd" id="1_symyc"]
[ext_resource type="PackedScene" uid="uid://dgcg44gqh6b0" path="res://component/player_input_synchronizer_component.tscn" id="2_abrql"]
[ext_resource type="PackedScene" uid="uid://c1yhvo78m7dlx" path="res://component/health_component.tscn" id="3_fkugw"]
[ext_resource type="Texture2D" uid="uid://dy8tk4u026xms" path="res://entities/player/player-medium.png" id="3_sglur"]
[ext_resource type="PackedScene" uid="uid://cowdaeb6qcop8" path="res://component/hurtbox_component.tscn" id="4_8fjmc"]
[ext_resource type="Texture2D" uid="uid://efit64xh54jj" path="res://entities/player/rifle.png" id="4_bls4j"]

[sub_resource type="Animation" id="Animation_qiwj3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/WeaponRoot/WeaponAnimationRoot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/WeaponRoot/WeaponAnimationRoot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8fjmc"]
resource_name = "fire"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/WeaponRoot/WeaponAnimationRoot:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.00029999999, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(0.5, 1.5), Vector2(1.25, 0.75), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/WeaponRoot/WeaponAnimationRoot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.2617993877991494, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26q78"]
_data = {
&"RESET": SubResource("Animation_qiwj3"),
&"fire": SubResource("Animation_8fjmc")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_abrql"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:label_text")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qiwj3"]
radius = 6.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bls4j"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_symyc")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_26q78")
}

[node name="PlayerInputSynchronizerComponent" parent="." node_paths=PackedStringArray("aim_root") instance=ExtResource("2_abrql")]
aim_root = NodePath("../Visuals/WeaponRoot")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_abrql")

[node name="HealthComponent" parent="." instance=ExtResource("3_fkugw")]
max_health = 2

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(2, 3)
texture = ExtResource("3_sglur")
offset = Vector2(0, -16)

[node name="WeaponRoot" type="Node2D" parent="Visuals"]
position = Vector2(0, -9)

[node name="WeaponAnimationRoot" type="Node2D" parent="Visuals/WeaponRoot"]
position = Vector2(6, 0)

[node name="Sprite2D" type="Sprite2D" parent="Visuals/WeaponRoot/WeaponAnimationRoot"]
rotation = 0.007998617
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("4_bls4j")
centered = false
offset = Vector2(-15, -6)

[node name="BarrelPosition" type="Marker2D" parent="Visuals/WeaponRoot/WeaponAnimationRoot"]
position = Vector2(14, -2)

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_8fjmc")]
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(-1, -9)
shape = SubResource("CapsuleShape2D_qiwj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_bls4j")

[node name="Label" type="Label" parent="."]
offset_left = -3.0
offset_top = 4.0
offset_right = 37.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0.011087579, 0.011087578, 0.01108758, 1)
text = "1"

[node name="DisplayNameLabel" type="Label" parent="."]
custom_minimum_size = Vector2(128, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = -44.0
offset_right = 71.0
offset_bottom = -28.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Darakai "
horizontal_alignment = 1
